// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ui-elements-basic Components CheckBox  Render empty 1`] = `
.c0 {
  cursor: pointer;
}

.c0.disabled * {
  color: #inactive;
  cursor: not-allowed;
}

.c0 > input {
  display: none;
}

.c0 > svg {
  margin: 0px 5px;
  width: 1em;
  height: 1em;
}

.c0 > svg > path.checkbox-button-bg {
  stroke-width: 0;
  stroke: #active;
  fill: #active;
  display: none;
}

.c0.checked > svg > path.checkbox-button-bg,
.c0.indeterminate > svg > path.checkbox-button-bg {
  display: inline;
}

.c0:hover > svg > path.checkbox-button-bg,
.c0:focus > svg > path.checkbox-button-bg {
  stroke: #active_hovered;
  fill: #active_hovered;
}

.c0:active > svg > path.checkbox-button-bg {
  stroke: #active_lowered;
  fill: #active_lowered;
}

.c0.c0.disabled > svg > path.checkbox-button-bg {
  stroke: #inactive;
  fill: #inactive;
}

.c0 > svg > path.checkbox-button-border {
  stroke-width: 0;
  stroke: #text_highlight;
  fill: #text_highlight;
  display: none;
}

.c0.unchecked > svg > path.checkbox-button-border {
  display: inline;
}

.c0:hover > svg > path.checkbox-button-border,
.c0:focus > svg > path.checkbox-button-border {
  stroke: #active_hovered;
  fill: #active_hovered;
}

.c0:active > svg > path.checkbox-button-border {
  stroke: #active_lowered;
  fill: #active_lowered;
}

.c0.c0.disabled > svg > path.checkbox-button-border {
  stroke: #inactive;
  fill: #inactive;
}

.c0 > svg > path.checkbox-button-selection {
  stroke-width: 3;
  stroke: #text_highlight;
  fill: #text_highlight;
  display: none;
}

.c0.checked > svg > path.checkbox-button-selection {
  display: inline;
}

.c0.c0.disabled > svg > path.checkbox-button-selection {
  stroke: #inactive;
  fill: #inactive;
}

.c0 > svg > path.checkbox-button-schrodinger {
  stroke-width: 3;
  stroke: #text;
  fill: #text;
  display: none;
}

.c0.indeterminate > svg > path.checkbox-button-schrodinger {
  display: inline;
}

.c0.c0.disabled > svg > path.checkbox-button-schrodinger {
  stroke: #inactive;
  fill: #inactive;
}

<span
  className="indeterminate c0"
  onClick={[Function]}
>
  <input
    checked={true}
    onChange={[Function]}
    type="checkbox"
  />
  <svg
    viewBox="-144 -144 624 624"
  >
    <path
      className="checkbox-button-bg"
      d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48z"
    />
    <path
      className="checkbox-button-border"
      d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zm0 400H48V80h352v352z"
    />
    <path
      className="checkbox-button-selection"
      d="m 310.864 241.724L191.547 361.48c-4.705 4.667-12.303 4.637-16.97-.068l-90.781-91.516c-4.667-4.705-4.637-12.303.069-16.971l22.719-22.536c4.705-4.667 12.303-4.637 16.97.069l59.792 60.277 141.352-140.216c4.705-4.667 12.303-4.637 16.97.068l22.536 22.718c4.667 4.706 4.637 12.304-.068 16.971z"
    />
    <path
      className="checkbox-button-schrodinger "
      d="M 92 296 c -6.6 0 -12 -5.4 -12 -12 v -56 c 0 -6.6 5.4 -12 12 -12 h 264 c 6.6 0 12 5.4 12 12 v 56 c 0 6.6 -5.4 12 -12 12 H 92 Z"
    />
  </svg>
</span>
`;

exports[`ui-elements-basic Components CheckBox Render check 1`] = `
.c0 {
  cursor: pointer;
}

.c0.disabled * {
  color: #inactive;
  cursor: not-allowed;
}

.c0 > input {
  display: none;
}

.c0 > svg {
  margin: 0px 5px;
  width: 1em;
  height: 1em;
}

.c0 > svg > path.checkbox-button-bg {
  stroke-width: 0;
  stroke: #active;
  fill: #active;
  display: none;
}

.c0.checked > svg > path.checkbox-button-bg,
.c0.indeterminate > svg > path.checkbox-button-bg {
  display: inline;
}

.c0:hover > svg > path.checkbox-button-bg,
.c0:focus > svg > path.checkbox-button-bg {
  stroke: #active_hovered;
  fill: #active_hovered;
}

.c0:active > svg > path.checkbox-button-bg {
  stroke: #active_lowered;
  fill: #active_lowered;
}

.c0.c0.disabled > svg > path.checkbox-button-bg {
  stroke: #inactive;
  fill: #inactive;
}

.c0 > svg > path.checkbox-button-border {
  stroke-width: 0;
  stroke: #text_highlight;
  fill: #text_highlight;
  display: none;
}

.c0.unchecked > svg > path.checkbox-button-border {
  display: inline;
}

.c0:hover > svg > path.checkbox-button-border,
.c0:focus > svg > path.checkbox-button-border {
  stroke: #active_hovered;
  fill: #active_hovered;
}

.c0:active > svg > path.checkbox-button-border {
  stroke: #active_lowered;
  fill: #active_lowered;
}

.c0.c0.disabled > svg > path.checkbox-button-border {
  stroke: #inactive;
  fill: #inactive;
}

.c0 > svg > path.checkbox-button-selection {
  stroke-width: 3;
  stroke: #text_highlight;
  fill: #text_highlight;
  display: none;
}

.c0.checked > svg > path.checkbox-button-selection {
  display: inline;
}

.c0.c0.disabled > svg > path.checkbox-button-selection {
  stroke: #inactive;
  fill: #inactive;
}

.c0 > svg > path.checkbox-button-schrodinger {
  stroke-width: 3;
  stroke: #text;
  fill: #text;
  display: none;
}

.c0.indeterminate > svg > path.checkbox-button-schrodinger {
  display: inline;
}

.c0.c0.disabled > svg > path.checkbox-button-schrodinger {
  stroke: #inactive;
  fill: #inactive;
}

<span
  className="checked c0"
  onClick={[Function]}
>
  <input
    checked={true}
    onChange={[Function]}
    type="checkbox"
  />
  <svg
    viewBox="-144 -144 624 624"
  >
    <path
      className="checkbox-button-bg"
      d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48z"
    />
    <path
      className="checkbox-button-border"
      d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zm0 400H48V80h352v352z"
    />
    <path
      className="checkbox-button-selection"
      d="m 310.864 241.724L191.547 361.48c-4.705 4.667-12.303 4.637-16.97-.068l-90.781-91.516c-4.667-4.705-4.637-12.303.069-16.971l22.719-22.536c4.705-4.667 12.303-4.637 16.97.069l59.792 60.277 141.352-140.216c4.705-4.667 12.303-4.637 16.97.068l22.536 22.718c4.667 4.706 4.637 12.304-.068 16.971z"
    />
    <path
      className="checkbox-button-schrodinger "
      d="M 92 296 c -6.6 0 -12 -5.4 -12 -12 v -56 c 0 -6.6 5.4 -12 12 -12 h 264 c 6.6 0 12 5.4 12 12 v 56 c 0 6.6 -5.4 12 -12 12 H 92 Z"
    />
  </svg>
</span>
`;

exports[`ui-elements-basic Components CheckBox Render indeterminate and disabled 1`] = `
.c0 {
  cursor: pointer;
}

.c0.disabled * {
  color: #inactive;
  cursor: not-allowed;
}

.c0 > input {
  display: none;
}

.c0 > svg {
  margin: 0px 5px;
  width: 1em;
  height: 1em;
}

.c0 > svg > path.checkbox-button-bg {
  stroke-width: 0;
  stroke: #active;
  fill: #active;
  display: none;
}

.c0.checked > svg > path.checkbox-button-bg,
.c0.indeterminate > svg > path.checkbox-button-bg {
  display: inline;
}

.c0:hover > svg > path.checkbox-button-bg,
.c0:focus > svg > path.checkbox-button-bg {
  stroke: #active_hovered;
  fill: #active_hovered;
}

.c0:active > svg > path.checkbox-button-bg {
  stroke: #active_lowered;
  fill: #active_lowered;
}

.c0.c0.disabled > svg > path.checkbox-button-bg {
  stroke: #inactive;
  fill: #inactive;
}

.c0 > svg > path.checkbox-button-border {
  stroke-width: 0;
  stroke: #text_highlight;
  fill: #text_highlight;
  display: none;
}

.c0.unchecked > svg > path.checkbox-button-border {
  display: inline;
}

.c0:hover > svg > path.checkbox-button-border,
.c0:focus > svg > path.checkbox-button-border {
  stroke: #active_hovered;
  fill: #active_hovered;
}

.c0:active > svg > path.checkbox-button-border {
  stroke: #active_lowered;
  fill: #active_lowered;
}

.c0.c0.disabled > svg > path.checkbox-button-border {
  stroke: #inactive;
  fill: #inactive;
}

.c0 > svg > path.checkbox-button-selection {
  stroke-width: 3;
  stroke: #text_highlight;
  fill: #text_highlight;
  display: none;
}

.c0.checked > svg > path.checkbox-button-selection {
  display: inline;
}

.c0.c0.disabled > svg > path.checkbox-button-selection {
  stroke: #inactive;
  fill: #inactive;
}

.c0 > svg > path.checkbox-button-schrodinger {
  stroke-width: 3;
  stroke: #text;
  fill: #text;
  display: none;
}

.c0.indeterminate > svg > path.checkbox-button-schrodinger {
  display: inline;
}

.c0.c0.disabled > svg > path.checkbox-button-schrodinger {
  stroke: #inactive;
  fill: #inactive;
}

<span
  className="disabled indeterminate c0"
  disabled={true}
  onClick={[Function]}
>
  <input
    checked={true}
    onChange={[Function]}
    type="checkbox"
  />
  <svg
    viewBox="-144 -144 624 624"
  >
    <path
      className="checkbox-button-bg"
      d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48z"
    />
    <path
      className="checkbox-button-border"
      d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zm0 400H48V80h352v352z"
    />
    <path
      className="checkbox-button-selection"
      d="m 310.864 241.724L191.547 361.48c-4.705 4.667-12.303 4.637-16.97-.068l-90.781-91.516c-4.667-4.705-4.637-12.303.069-16.971l22.719-22.536c4.705-4.667 12.303-4.637 16.97.069l59.792 60.277 141.352-140.216c4.705-4.667 12.303-4.637 16.97.068l22.536 22.718c4.667 4.706 4.637 12.304-.068 16.971z"
    />
    <path
      className="checkbox-button-schrodinger "
      d="M 92 296 c -6.6 0 -12 -5.4 -12 -12 v -56 c 0 -6.6 5.4 -12 12 -12 h 264 c 6.6 0 12 5.4 12 12 v 56 c 0 6.6 -5.4 12 -12 12 H 92 Z"
    />
  </svg>
</span>
`;

exports[`ui-elements-basic Components CheckBox Render uncheck 1`] = `
.c0 {
  cursor: pointer;
}

.c0.disabled * {
  color: #inactive;
  cursor: not-allowed;
}

.c0 > input {
  display: none;
}

.c0 > svg {
  margin: 0px 5px;
  width: 1em;
  height: 1em;
}

.c0 > svg > path.checkbox-button-bg {
  stroke-width: 0;
  stroke: #active;
  fill: #active;
  display: none;
}

.c0.checked > svg > path.checkbox-button-bg,
.c0.indeterminate > svg > path.checkbox-button-bg {
  display: inline;
}

.c0:hover > svg > path.checkbox-button-bg,
.c0:focus > svg > path.checkbox-button-bg {
  stroke: #active_hovered;
  fill: #active_hovered;
}

.c0:active > svg > path.checkbox-button-bg {
  stroke: #active_lowered;
  fill: #active_lowered;
}

.c0.c0.disabled > svg > path.checkbox-button-bg {
  stroke: #inactive;
  fill: #inactive;
}

.c0 > svg > path.checkbox-button-border {
  stroke-width: 0;
  stroke: #text_highlight;
  fill: #text_highlight;
  display: none;
}

.c0.unchecked > svg > path.checkbox-button-border {
  display: inline;
}

.c0:hover > svg > path.checkbox-button-border,
.c0:focus > svg > path.checkbox-button-border {
  stroke: #active_hovered;
  fill: #active_hovered;
}

.c0:active > svg > path.checkbox-button-border {
  stroke: #active_lowered;
  fill: #active_lowered;
}

.c0.c0.disabled > svg > path.checkbox-button-border {
  stroke: #inactive;
  fill: #inactive;
}

.c0 > svg > path.checkbox-button-selection {
  stroke-width: 3;
  stroke: #text_highlight;
  fill: #text_highlight;
  display: none;
}

.c0.checked > svg > path.checkbox-button-selection {
  display: inline;
}

.c0.c0.disabled > svg > path.checkbox-button-selection {
  stroke: #inactive;
  fill: #inactive;
}

.c0 > svg > path.checkbox-button-schrodinger {
  stroke-width: 3;
  stroke: #text;
  fill: #text;
  display: none;
}

.c0.indeterminate > svg > path.checkbox-button-schrodinger {
  display: inline;
}

.c0.c0.disabled > svg > path.checkbox-button-schrodinger {
  stroke: #inactive;
  fill: #inactive;
}

<span
  className="unchecked c0"
  onClick={[Function]}
>
  <input
    checked={false}
    onChange={[Function]}
    type="checkbox"
  />
  <svg
    viewBox="-144 -144 624 624"
  >
    <path
      className="checkbox-button-bg"
      d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48z"
    />
    <path
      className="checkbox-button-border"
      d="M400 32H48C21.49 32 0 53.49 0 80v352c0 26.51 21.49 48 48 48h352c26.51 0 48-21.49 48-48V80c0-26.51-21.49-48-48-48zm0 400H48V80h352v352z"
    />
    <path
      className="checkbox-button-selection"
      d="m 310.864 241.724L191.547 361.48c-4.705 4.667-12.303 4.637-16.97-.068l-90.781-91.516c-4.667-4.705-4.637-12.303.069-16.971l22.719-22.536c4.705-4.667 12.303-4.637 16.97.069l59.792 60.277 141.352-140.216c4.705-4.667 12.303-4.637 16.97.068l22.536 22.718c4.667 4.706 4.637 12.304-.068 16.971z"
    />
    <path
      className="checkbox-button-schrodinger "
      d="M 92 296 c -6.6 0 -12 -5.4 -12 -12 v -56 c 0 -6.6 5.4 -12 12 -12 h 264 c 6.6 0 12 5.4 12 12 v 56 c 0 6.6 -5.4 12 -12 12 H 92 Z"
    />
  </svg>
</span>
`;
